# transformrs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: audit.yml  check.yml  release.yml
examples/: README.md  chat.rs  debug.rs  image-chat.rs  streaming-chat.rs  text-to-image.rs  text-to-speech.rs
src/: chat.rs  lib.rs  main.rs  models.rs  openai.rs  text_to_image.rs  text_to_speech.rs  tts.rs
src/scripts/: release.sh
tests/: chat.rs  chat_extra.rs  models.rs  openai.rs  openai_extra.rs  text_to_image.rs  text_to_speech.rs  tts.rs
tests/common/: mod.rs
