[package]
name = "transformrs"
version = "0.1.0"
authors = ["Rik Huijzer <github@huijzer.xyz>"]
description = "An interface on top of various AI APIs"
edition = "2021"
repository = "https://github.com/rikhuijzer/transformrs"
categories = ["ai"]
license = "MIT"
rust-version = "1.81"

[dependencies]
futures = "0.3.31"
futures-util = "0.3.31"
hyper = { version = "1.6.0", features = ["client", "http2"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
