[package]
name = "transformrs"
version = "0.2.1"
authors = ["Rik Huijzer <github@huijzer.xyz>"]
description = "An interface for AI APIs"
edition = "2021"
repository = "https://github.com/rikhuijzer/transformrs"
license = "MIT"
rust-version = "1.81"

[dependencies]
base64 = "0.22.1"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
