[package]
name = "transformrs"
version = "1.0.0"
authors = ["Rik Huijzer <github@huijzer.xyz>"]
description = "An interface for AI APIs"
edition = "2021"
repository = "https://github.com/transformrs/transformrs"
license = "MIT"
rust-version = "1.81"

[dependencies]
async-stream = "0.3.6"
base64 = "0.22.1"
bytes = "1.10.0"
futures = "0.3.31"
futures-util = "0.3.31"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"